--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@ body {
     <div class="message">
 Nothing here is meant to make you feel guilty I just want to say I am genuinely sorry for my behaviour I know aapko bohot bura laga hoga and
 I promise I will not repeat this again and I’ll try to be better for you
-Periods ke beech main maine aap par pressure create kiya uske liye bhi I’m really sorry yr
-Aage se I’ll be more patient more considerate aur aapko aur acche se samajhne ki koshish karunga aur har baat me overreact nahi kiya karunga instead of try to solve your problems i will hear them more and make you feel heard and treat you more gently
+Periods ke beech me maine aap par pressure create kiya uske liye bhi I’m really sorry yr
+Aage se I’ll be more patient more considerate and aapko aur acche se samajhne ki koshish karunga aur har baat me overreact nahi kiya karunga instead of try to solve your problems i will hear them more and make you feel heard and treat you more gently
 Agar meri kisi aur baat ya action se bhi aapko bura laga ho toh uske liye bhi i am so sorry 
 Mai aapko unnecessarily pareshan nahi karunga and I will improve
 I’m sorry for everything forgive me unnati I love you so much baby❤️
-
+        And haan saree me bilkul swarg se utri hui kokil kanthi apsara lagogi confident rehna mwah💋
+       abhi ke liye bhi sorry
 -Just read it no replies-
     </div>
 </div>
@@ -127,3 +128,4 @@ setInterval(createHeart, 300);
 
 </body>
 </html>
+
